--- a/11ty/_includes/postlist.njk
+++ b/11ty/_includes/postlist.njk
@@ -10,8 +10,11 @@
     <link rel="stylesheet" href="../css/post.css">
     <link rel="stylesheet" href="../css/skeleton.css">
     <link rel="stylesheet" href="../css/home.css">
-
     <link rel="stylesheet" href="../css/prism-theme.css">
+    <script type="text/javascript" src="../js/theme_switch.js" async defer></script>
+    <script>
+      console.log("inline JS")
+    </script>
   </head>
   <body>
     <section class="main">
@@ -61,7 +64,7 @@
 
       </div>
       {# Javascript for theme switching, light/dark mode. #}
-      <script type="text/javascript" src="../js/theme_switch.js" async defer/>
+      {# <script type="text/javascript" src="../js/theme_switch.js" async defer/> #}
     </section>
 
   </body>
