--- a/11ty/_includes/post.njk
+++ b/11ty/_includes/post.njk
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html data-theme="light">
   <!--<![endif]-->
   <head>
     <meta charset="utf-8">
@@ -10,8 +10,6 @@
     <link rel="stylesheet" href="../css/post.css">
     <link rel="stylesheet" href="../css/skeleton.css">
     <link rel="stylesheet" href="../css/prism-theme.css">
-    <script type="text/javascript" src="../js/theme_switch.js" async defer></script>
-    <script>console.log("inline JS")</script>
   </head>
   <body>
     {% set previousPost = collections.Post | getPreviousCollectionItem(page) %}
@@ -61,6 +59,6 @@
       </div>
       {# Javascript for theme switching, light/dark mode. #}
     </section>
-
+    <script type="text/javascript" src="../js/theme_switch.js" async defer></script>
   </body>
 </html>
