--- a/11ty/_includes/postlist.njk
+++ b/11ty/_includes/postlist.njk
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html data-theme="light">
   <!--<![endif]-->
   <head>
     <meta charset="utf-8">
@@ -11,10 +11,6 @@
     <link rel="stylesheet" href="../css/skeleton.css">
     <link rel="stylesheet" href="../css/home.css">
     <link rel="stylesheet" href="../css/prism-theme.css">
-    <script type="text/javascript" src="../js/theme_switch.js" async defer></script>
-    <script>
-      console.log("inline JS")
-    </script>
   </head>
   <body>
     <section class="main">
@@ -66,6 +62,7 @@
       {# Javascript for theme switching, light/dark mode. #}
       {# <script type="text/javascript" src="../js/theme_switch.js" async defer/> #}
     </section>
+    <script type="text/javascript" src="../js/theme_switch.js" async defer></script>
 
   </body>
 </html>
