foxed relative path

--- a/11ty/_includes/components/postlist.njk
+++ b/11ty/_includes/components/postlist.njk
@@ -1,10 +1,10 @@
-{% macro postList(collection, current, relativePath = '..') %}
+{% macro postList(collection, current) %}
   <div class = "post-list">
     <ul>
       {% for post in collection %}
         {% if post.data.title != current %}
           <li>
-            <a href="{{relativePath}}{{ post.url }}index.html">{{ post.data.title }}
+            <a href="{{ post.url }}index.html">{{ post.data.title }}
             </a>
             <span class="post-date"> ({{ post.date | formatDate }}) </span>
           </li>
