--- a/11ty/_includes/post.njk
+++ b/11ty/_includes/post.njk
@@ -1,3 +1,5 @@
+{%set root = ".."%}
+
 <!doctype html>
 <html data-theme="light">
   <!--<![endif]-->
@@ -30,12 +32,12 @@
         <div class="nav">
           {% if previousPost %}
             <a class="prev" 
-              href="/{{metadata.outDir}}{{previousPost.url}}index.html">&lt; {{ previousPost.data.title }}</a>
+              href="/{{root}}{{previousPost.url}}index.html">&lt; {{ previousPost.data.title }}</a>
           {% endif %}
 
           {% if nextPost %}
             <a class="next"
-              href="/{{metadata.outDir}}/{{nextPost.url}}index.html ">{{ nextPost.data.title }} &gt;</a>
+              href="/{{root}}/{{nextPost.url}}index.html ">{{ nextPost.data.title }} &gt;</a>
           {% endif %}
         </div>
       </div>
