--- a/11ty/_includes/home.njk
+++ b/11ty/_includes/home.njk
@@ -1,3 +1,6 @@
+{%import "components/post_macros.njk" as macros%}
+{%set root=".."%}
+
 <!doctype html>
 <html data-theme="light">
   <!--<![endif]-->
@@ -15,11 +18,9 @@
   </head>
 
   <body>
-
     <section class="main">
       <div class="content-wrapper">
         {% include "components/navbar.njk" %}
-
         {# blog title #}
         <h1 class="post-title">{{ title }}</h1>
         {# tags #}
@@ -34,21 +35,7 @@
 
         {# home page description #}
         <article class="post">{{ content | safe }}</article>
-
-        <div class = "post-list">
-          <ul>
-            {% for post in collections.all %}
-              {% if post.data.title != title %}
-                <li>
-                  <a href="{{ post.url }}index.html">{{ post.data.title }}
-                  </a>
-                  <span class="post-date"> ({{ post.date | formatDate }}) </span>
-                </li>
-              {% endif %}
-            {% endfor %}
-          </ul>
-        </div>
-
+        {{macros.postList(collections.all, title, root)}}
       </div>
     </section>
     <script type="text/javascript" src="../js/theme_switch.js"></script>
