--- a/11ty/_includes/components/post_macros.njk
+++ b/11ty/_includes/components/post_macros.njk
@@ -1,4 +1,4 @@
-{% macro header(title) %}
+{% macro header(title, tags) %}
   {# blog title #}
   <h1 class="post-title">{{ title }}</h1>
   <div class="info">{{page.date | formatDate}}</div>
