--- a/11ty/_includes/components/post_macros.njk
+++ b/11ty/_includes/components/post_macros.njk
@@ -1,3 +1,6 @@
+{## 
+# macro to create header from a given title and tag list.
+#}
 {% macro header(title, tags) %}
   {# blog title #}
   <h1 class="post-title">{{ title }}</h1>
@@ -12,6 +15,11 @@
   </div>
 {% endmacro %}
 
+{## 
+# create a <ul> list of posts that belong to the
+# `collection`, and the title of which doesn't match `title` 
+#  `root` being the relative path of the root w.r.t the caller.
+#}
 {% macro postList(collection, title, root) %}
   <div class = "post-list">
     <ul>
