--- a/css/post.css
+++ b/css/post.css
@@ -9,11 +9,12 @@ body {
 }
 
 [data-theme='dark'] {
-  --fg-color: #c8d6e5;
+  --fg-color: #ffffff;
   --fg-color-2: #d1d8e0;
-  --bg-color: #202022;
+  --bg-color: #23272a;
   --info-color: gray;
-  --accent-color: #242428;
+  --accent-color: #2c2f33;
+  --logo-color: #fed330;
 }
 
 [data-theme='light'] {
@@ -22,6 +23,7 @@ body {
   --info-color: gray;
   --bg-color: #ffffff;
   --accent-color: #fafafa;
+  --logo-color: #227093;
 }
 
 .main {
@@ -34,6 +36,7 @@ body {
 #logo:hover {
   color: var(--fg-color);
   font-size: 30px;
+  color: var(--logo-color);
   text-decoration: none;
   font-family: 'Miriam Libre', sans-serif;
 }
@@ -41,7 +44,6 @@ body {
 /* navbar */
 
 .navbar {
-  width: 100%;
   display: grid;
   grid-template-columns: 50% 50%;
   /* gap: 10%; */
@@ -49,22 +51,22 @@ body {
 }
 
 .nav-item {
-  padding-right: 10%;
   font-style: bold;
   font-size: 25px;
 }
 
 .content-wrapper {
-  /* margin-top: 5% !important; */
+  margin-top: 3% !important;
   background-color: var(--accent-color);
   color: var(--fg-color);
   font-family: 'Karla', sans-serif;
-  padding: 5%;
+  padding: 3%;
   width: 55%;
   margin: auto;
   padding-top: 2%;
   font-size: 20px;
   text-align: left;
+  border-radius: 1rem;
   transition: background-color 300ms ease-in;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 10px 0 rgba(0, 0, 0, 0.19);
 }
@@ -219,6 +221,7 @@ p {
 @media only screen and (max-width: 800px) {
   .content-wrapper {
     width: 90%;
+    margin-top: 0%;
     font-size: 18px;
     text-align: left;
   }
