--- a/11ty/_includes/post.njk
+++ b/11ty/_includes/post.njk
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="../css/prism-theme.css">
   </head>
   <body>
-    {% set previousPost = collections.Post | getPreviousCollectionItem(page) %}
-    {% set nextPost = collections.Post | getNextCollectionItem(page) %}
+    {% set previousPost = collections.all | getPreviousCollectionItem(page) %}
+    {% set nextPost = collections.all | getNextCollectionItem(page) %}
     <class class="main">
       <div class="content-wrapper">
         {% include "components/navbar.njk" %}
