--- a/docs/css/post.css
+++ b/docs/css/post.css
@@ -169,13 +169,12 @@ h4,
 h5,
 h6 {
   color: var(--fg-color-2);
-  padding-top: 4%;
-  text-align: left;
   font-family: 'Epilogue', sans-serif;
+  text-align: left;
 }
 
 h2 {
-  font-size: 3.3rem !important;
+  font-size: 2.5rem !important;
 }
 
 pre {
@@ -183,6 +182,7 @@ pre {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding: 2.5% !important;
   line-height: 10%;
+  margin-bottom: 4% !important;
 }
 
 code {
