--- a/css/post.css
+++ b/css/post.css
@@ -9,8 +9,8 @@ body {
 }
 
 [data-theme='dark'] {
-  --fg-color: #d1d8e0;
-  --fg-color-2: #a5b1c2;
+  --fg-color: #fafafa;
+  --fg-color-2: #fafafa;
   --bg-color: #23272a;
   --info-color: gray;
   --accent-color: #2c2f33;
