--- a/11ty/_includes/post.njk
+++ b/11ty/_includes/post.njk
@@ -1,5 +1,3 @@
-{%set root = ".."%}
-
 <!doctype html>
 <html data-theme="light">
   <!--<![endif]-->
@@ -32,12 +30,12 @@
         <div class="nav">
           {% if previousPost %}
             <a class="prev" 
-              href="{{root}}{{previousPost.url}}index.html">&lt; {{ previousPost.data.title }}</a>
+              href="{{env.root}}{{previousPost.url}}index.html">&lt; {{ previousPost.data.title }}</a>
           {% endif %}
 
           {% if nextPost %}
             <a class="next"
-              href="{{root}}{{nextPost.url}}index.html ">{{ nextPost.data.title }} &gt;</a>
+              href="{{env.root}}{{nextPost.url}}index.html ">{{ nextPost.data.title }} &gt;</a>
           {% endif %}
         </div>
       </div>
