--- a/11ty/_includes/components/navbar.njk
+++ b/11ty/_includes/components/navbar.njk
@@ -1,6 +1,6 @@
 <div class="navbar">
   <div class="nav-item">
-    <a href="../home/index.html" id="logo">{{ metadata.blogName }}</a>
+    <a href="{{env.root}}/home/index.html" id="logo">{{ metadata.blogName }}</a>
   </div>
 
   {# theme switcher button #}
