--- a/docs/css/post.css
+++ b/docs/css/post.css
@@ -221,9 +221,16 @@ p {
 @media only screen and (max-width: 800px) {
   .content-wrapper {
     width: 90%;
-    margin-top: 0%;
+    /* margin-top: 0%; */
     font-size: 18px;
     text-align: left;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+
+  .post {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   .post-title,
