added tag based searching

--- a/11ty/_includes/components/post_macros.njk
+++ b/11ty/_includes/components/post_macros.njk
@@ -8,7 +8,7 @@
   {# tags #}
   <div class="tags">
     {% for tag in tags %}
-      <a class="tag" href="#">
+      <a class="tag" href="/tags/{{tag}}">
         {{ tag }}
       </a>
     {% endfor %}
