--- a/11ty/_includes/home.njk
+++ b/11ty/_includes/home.njk
@@ -34,7 +34,7 @@
         {# home page description #}
         <article class="post">
           {{ content | safe }}
-          {{macros.postList(collections.Post, "..")}}
+          {{macros.postList(collections.Post)}}
         </article>
       </div>
     </section>
