--- a/11ty/_includes/components/post_macros.njk
+++ b/11ty/_includes/components/post_macros.njk
@@ -8,7 +8,7 @@
   {# tags #}
   <div class="tags">
     {% for tag in tags %}
-      <a class="tag" href="{{root.env}}/tags/{{tag}}">
+      <a class="tag" href= "{{ ("tags/" + tag) | url }}">
         {{ tag }}
       </a>
     {% endfor %}
@@ -24,7 +24,6 @@
   <div class = "post-list">
     <ul>
       {% for post in collection %}
-
         <li>
           <a href="{{ post.url | url }}">{{ post.data.title }}
           </a>
