--- a/11ty/_includes/components/post_macros.njk
+++ b/11ty/_includes/components/post_macros.njk
@@ -36,7 +36,7 @@
   </div>
 {% endmacro %}
 
-{% macro navbar(path = '', name = 'ByteFiction') %}
+{% macro navbar(path = '..', name = 'ByteFiction') %}
 
   <div class="navbar">
     <div class="nav-item">
