--- a/11ty/_includes/home.njk
+++ b/11ty/_includes/home.njk
@@ -18,7 +18,7 @@
   <body>
     <section class="main">
       <div class="content-wrapper">
-        {{macros.navbar()}}
+        {{ macros.navbar('../' + env.root) }}
 
         {# blog title #}
         <h1 class="post-title">{{ title }}</h1>
