--- a/11ty/_includes/post.njk
+++ b/11ty/_includes/post.njk
@@ -19,7 +19,7 @@
     {% set nextPost = collections.Post | getNextCollectionItem(page) %}
     <class class="main">
       <div class="content-wrapper">
-        {{ macros.navbar('../') }}
+        {{ macros.navbar('../../') }}
         {{ macros.header(title, tags) }}
         <hr>
 
