--- a/11ty/contents.njk
+++ b/11ty/contents.njk
@@ -7,7 +7,7 @@ permalink: /tags/{{ tag }}/
 layout: content_list.njk
 ---
 
-<h1 class="post-title">Posts tagged “{{ tag }}”:</h1>
+<h3 class="post-title" style="font-size: 22px">Posts tagged "{{ tag }}":</h3>
 
 <div class="post-list">
   <ul>
@@ -16,7 +16,7 @@ layout: content_list.njk
       <li>
         <a href="../../{{ post.url }}">{{ post.data.title }}
         </a>
-        <span class="post-date">{{post.data.date | formatDate}}
+        <span class="post-date">{{ post.data.date | formatDate }}
         </span>
       </li>
     {% endfor %}
