renamed tags, added a new post

--- a/11ty/_includes/home.njk
+++ b/11ty/_includes/home.njk
@@ -28,7 +28,7 @@
         {# home page description #}
         <article class="post">
           {{ content | safe }}
-          {{macros.postList(collections.Post)}}
+          {{macros.postList(collections.post)}}
         </article>
       </div>
     </section>
