--- a/css/post.css
+++ b/css/post.css
@@ -60,7 +60,7 @@ body {
   margin-top: 3% !important;
   background-color: var(--accent-color);
   color: var(--fg-color);
-  font-family:  'Karla', sans-serif;
+  font-family: 'Karla', sans-serif;
   padding: 3%;
   word-spacing: 0.3rem;
   width: 55%;
@@ -72,6 +72,24 @@ body {
   border-radius: 1rem;
   transition: background-color 300ms ease-in;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 10px 0 rgba(0, 0, 0, 0.19);
+  line-height: 1.3;
+}
+
+ul li {
+  list-style: square none;
+  margin-left: 2%;
+}
+
+ol {
+  list-style: none none none;
+}
+
+ol li {
+  /* display: inline; */
+  list-style-position: initial;
+  margin: 0;
+  padding: 0;
+  margin-left: 1.5%;
 }
 
 .post-title {
@@ -79,6 +97,14 @@ body {
   font-family: 'Epilogue', sans-serif;
   text-align: left;
   color: var(--fg-color-2);
+}
+
+img {
+  border-radius: 1.5%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 4px 10px 0 rgba(0, 0, 0, 0.5);
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 a,
@@ -180,6 +206,10 @@ h2 {
   font-size: 2.5rem !important;
 }
 
+h3 {
+  font-size: 2rem !important;
+}
+
 pre {
   border-radius: 8px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -239,8 +269,12 @@ p {
     padding: 4% 4% 4% 4% !important;
   }
 
-  code[class*="language"] {
+  code[class*='language'] {
     font-size: 14px !important;
   }
 
+  img {
+    width: 100%;
+    height: auto;
+  }
 }
