--- a/11ty/contents.njk
+++ b/11ty/contents.njk
@@ -16,7 +16,7 @@ layout: content_list.njk
       <li>
         <a href="../../{{ post.url }}">{{ post.data.title }}
         </a>
-        <span class="post-date">{{ post.data.date | formatDate }}
+        <span class="post-date">{{ post.date | formatDate }}
         </span>
       </li>
     {% endfor %}
