--- a/css/post.css
+++ b/css/post.css
@@ -22,8 +22,8 @@ body {
   --fg-color: #2c3e50;
   --fg-color-2: #2c3e50;
   --info-color: gray;
-  --bg-color: #ffffff;
-  --accent-color: #fafafa;
+  --bg-color: #fafafa;
+  --accent-color: #ffffff;
   --logo-color: #227093;
 }
 
@@ -71,7 +71,7 @@ body {
   text-align: left;
   border-radius: 1rem;
   transition: background-color 300ms ease-in;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 10px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 2px 5px 0 rgba(0, 0, 0, 0.19);
   line-height: 1.3;
 }
 
@@ -101,10 +101,11 @@ ol li {
 
 img {
   border-radius: 1.5%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 4px 10px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5), 0 2px 4px 0 rgba(0, 0, 0, 0.5);
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 2%;
 }
 
 a,
@@ -211,8 +212,8 @@ h3 {
 }
 
 pre {
-  border-radius: 8px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 4px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 2px 5px 0 rgba(0, 0, 0, 0.19);
   padding: 2.5% !important;
   margin-bottom: 4% !important;
 }
