--- a/css/prism-theme.css
+++ b/css/prism-theme.css
@@ -12,18 +12,18 @@
 */
 
 [data-theme='dark'] {
-  --background: #272822;
-  --foreground: #f8f8f2;
-  --comment: rgb(117, 113, 94);
-  --keyword: #ff6188;
+  --background: #1e1e1e;
+  --foreground: #d4d4d4;
+  --comment: #6a9955;
+  --keyword: #569cd6;
   --var: #fc9867;
-  --function: #0fb9b1;
+  --function: #dcdcaa;
   --property: #66d9ef;
-  --number: #ab9df2;
+  --number: #b5cea8;
   --semi: #8395a7;
-  --string: #e5c07b;
-  --operator: #ff6b6b;
-  --const: #78dce8;
+  --string: #ce9178;
+  --operator: #d4d4d4;
+  --const: #31aa90;
 
   --bg-no-pre: #222f3e;
   --fg-no-pre: #c8d6e5;
@@ -42,16 +42,16 @@
   --string: #e5c07b;
   --operator: #ff6b6b; */
 
-  --background: #f8f5ec;
-  --foreground: #5c6e74;
+  --background: #f1f3f4;
+  --foreground: #37474f;
   --comment: #93a1a1;
-  --keyword: #0077aa;
+  --keyword: #195abb;
   --var: #ee9900;
   --function: #dd4a68;
   --property: #990055;
-  --number: #0fb9b1;
+  --number: #0c99a3;
   --semi: #999999;
-  --string: green;
+  --string: rgb(22, 141, 95);
   --operator: #a67f59;
   --const: #e84393;
 
@@ -64,7 +64,7 @@ code[class*='language-'] {
   color: var(--foreground);
   font-size: 13px;
   text-shadow: none;
-  font-family:  'Fira Code', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono',
+  font-family: 'Fira Code', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono',
     monospace;
   direction: ltr;
   text-align: left;
