--- a/11ty/_includes/post.njk
+++ b/11ty/_includes/post.njk
@@ -30,7 +30,7 @@
         <div class="nav">
           {% if previousPost %}
             <a class="prev" 
-              href="../{{ nextPost.url }}">&lt; {{ previousPost.data.title }}</a>
+              href="../{{ previousPost.url }}">&lt; {{ previousPost.data.title }}</a>
           {% endif %}
 
           {% if nextPost %}
