--- a/11ty/_includes/post.njk
+++ b/11ty/_includes/post.njk
@@ -35,7 +35,7 @@
 
           {% if nextPost %}
             <a class="next"
-              href"../{{ nextPost.url }}">{{ nextPost.data.title }} &gt;</a>
+              href = "../{{ nextPost.url }}">{{ nextPost.data.title }} &gt;</a>
           {% endif %}
         </div>
       </div>
