--- a/css/post.css
+++ b/css/post.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla&family=Work+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
 
 body {
   margin: 0px;
@@ -10,9 +10,9 @@ body {
 }
 
 [data-theme='dark'] {
-  --fg-color: #d3d3d3;
-  --fg-color-2: #dddddd;
-  --bg-color: #1a1c1f;
+  --fg-color: rgb(155 165 165);
+  --heading-color: rgb(180 180 180);
+  --bg-color: rgb(32, 35, 37);
   --info-color: gray;
   --accent-color: rgb(32, 35, 37);
   --logo-color: #fed130d3;
@@ -23,16 +23,11 @@ body {
   --fg-color: #2c3e50;
   --fg-color-2: #2c3e50;
   --info-color: gray;
-  --bg-color: #fafafa;
+  --bg-color: #ffffff;
+  --heading-color: #2c3e50;
   --accent-color: #ffffff;
   --logo-color: #227093;
   --link-color: #01a3a4;
-}
-
-.main {
-  background-color: var(--bg-color);
-  transition: background-color 500ms ease-in;
-  transition: color 100ms;
 }
 
 #logo,
@@ -41,7 +36,7 @@ body {
   font-size: 30px;
   color: var(--logo-color);
   text-decoration: none;
-  font-family: 'Fira Code', monospace, sans-serif;
+  font-family: 'JetBrains Mono', monospace, sans-serif;
 }
 
 /* navbar */
@@ -71,9 +66,9 @@ body {
   padding-top: 2%;
   font-size: 20px;
   text-align: left;
-  border-radius: 1rem;
+  /* border-radius: 1rem; */
   transition: background-color 300ms ease-in;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 2px 5px 0 rgba(0, 0, 0, 0.19);
+  /* box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 2px 5px 0 rgba(0, 0, 0, 0.19); */
   line-height: 1.3;
 }
 
@@ -103,7 +98,7 @@ ol li {
 
 img {
   border-radius: 1.5%;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5), 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  /*box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5), 0 2px 4px 0 rgba(0, 0, 0, 0.5);*/
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -200,7 +195,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: var(--fg-color-2);
+  color: var(--heading-color);
   font-family: 'Epilogue', sans-serif;
   text-align: left;
 }
@@ -215,14 +210,12 @@ h3 {
 
 pre {
   border-radius: 4px;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 2px 5px 0 rgba(0, 0, 0, 0.19);
   padding: 2.5% !important;
   margin-bottom: 4% !important;
 }
 
 code {
-  font-size: 15.5px !important;
-  /* line-height: 10%; */
+  font-size: 17px !important;
   overflow: scroll;
 }
 
